@@ -20,7 +20,8 @@ RELEASE NOTES
     these predicates.
 
     Simplified and improved the performance of the predicate lookup caching
-    code.
+    code. Simplified and improved the performance of the built-in methods
+    asserta/1 and assertz/1 when asserting a clause for a new predicate.
 
     Updated the Logtalk compiler in order to also delete the intermediate
     files generated by the back-end Prolog compilers when compiling the
